<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="pref_location_key" translatable="false">setting_pref_location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_location_label">Location</string>

    <string name="pref_temperature_unit_key">Temperature Units</string>
    <string name="pref_temperature_unit_metric" translatable="false">metric</string>
    <string name="pref_temperature_unit_imperial" translatable="false">imperial</string>
    <string name="pref_temperature_unit_label">Temperature Unit</string>
    <string-array name="pref_temperature_units">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string-array name="pref_temperature_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

</resources>
