<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <ListPreference android:key="@string/pref_temperature_unit_key"
        android:title="@string/pref_temperature_unit_label"
        android:entries="@array/pref_temperature_units"
        android:entryValues="@array/pref_temperature_units_values"
        android:defaultValue="@string/pref_temperature_unit_default" />

</PreferenceScreen>
